xorg-server (2:1.7.2-2) UNRELEASED; urgency=low

  * debian/rules: upstream build system got fixed, no need to remove
    configure-generated files.

 -- Julien Cristau <jcristau@debian.org>  Sat, 28 Nov 2009 17:07:07 +0100

xorg-server (2:1.7.2-1) experimental; urgency=low

  * New upstream release
    + Xorg sets umask to 022 (closes: #555308)
  * Delete 09_debian_xserver_rtff.diff.  Was disabled since 1.3.99, and is not
    necessary since the fall back to builtin fonts was added.
  * Change the server's dependency on xserver-common to >= ${source:Version},
    to allow installation of different versions of the various servers.
  * Add build-dep on libglib2.0-dev, xkb-data and x11-xkb-utils for unit
    tests, and run the tests unless nocheck is in DEB_BUILD_OPTIONS.
  * Cherry-pick upstream commit to turn ModeDebug on during server startup,
    replacing our Turn-on-ModeDebug-by-default.patch.
  * Number our patches to make it easier to keep track of things.  Requested
    by the Ubuntu folks.
  * xvfb-run: retry a few times if Xvfb can't be started when using
    --auto-servernum, to make concurrent invocations work (closes: #521075).
    Thanks, Kees Cook!
  * Use libudev instead of libhal for input hotplug on linux.
  * Add udev rule to get keymap from /etc/default/keyboard.

 -- Julien Cristau <jcristau@debian.org>  Sat, 28 Nov 2009 16:48:43 +0100

xorg-server (2:1.7.0-1) experimental; urgency=low

  * Add missing Conflicts on xserver-xorg-video-5 and xserver-xorg-input-4.
  * Add xkb-data to xserver-common's Depends.  XKB is mandatory in 1.7.
  * Make all servers depend on xserver-common (= ${source:Version}).
  * New upstream release
    + fixes Xvfb crashes (closes: #529927)
    + fixes DGA init crash (closes: #548716)

 -- Julien Cristau <jcristau@debian.org>  Sun, 04 Oct 2009 15:57:01 +0200

xorg-server (2:1.6.99.903-1) experimental; urgency=low

  * New upstream snapshot.
    + doesn't fill log file with errors when acpid isn't running